issue_145: fix side menu not covering whole page

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -1,6 +1,17 @@
 // import the CSS framework
 @import "foundation";
 
+body,html{
+    height:100%;
+    width:100%;
+}
+.page{
+    height:100%;   
+}
+.off-canvas-wrap,.inner-wrap{
+    height:100%;   
+}
+  
 // override for the 'Home' navigation link
 .top-bar .name {
   font-size: rem-calc(13);
